modified so actions and sizes are one thing

--- a/testing1.ipynb
+++ b/testing1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,14 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[38, 12, 46, 34, 11, 0, 0]\n"
+      "[38, 12, 46, 34, 11, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
      ]
     }
    ],
@@ -39,7 +39,7 @@
     "hand = [\"Ad\", \"As\"]\n",
     "board = [\"9h\", \"Td\", \"Ks\"]\n",
     "\n",
-    "all_card_indices = [encode_card(card) for card in hand] + [encode_card(card) for card in board] + [-1] * (5 - len(board))\n",
+    "all_card_indices = [encode_card(card) for card in hand] + [encode_card(card) for card in board] + [0, 0, 0, 0, 0] * (5 - len(board))\n",
     "\n",
     "print(all_card_indices)\n",
     "\n",
@@ -48,10 +48,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "torch.zeros(1, 5)"
+   ]
   }
  ],
  "metadata": {
