modified so that sending actions is working

--- a/testing1.ipynb
+++ b/testing1.ipynb
@@ -66,6 +66,38 @@
     "import torch\n",
     "torch.zeros(1, 5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def tep():\n",
+    "    return 1, 2, 3\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "a, b, c = tep()\n",
+    "\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
